<resources>
    <string name="app_name">Medi App</string>
    <string name="title_activity_signup">signup</string>
    <string name="signup_button">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone No.</string>
    <string name="mail">Address</string>
    <string name="username">User</string>
    <string name="password">Any Diseases</string>
    <string name="doctor">Doctor</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="address">Address</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_maps">Maps</string>
    <string name="nav_list">Book Appointment</string>
    <string name="nav_develop">Developers</string>

    <string name="add_new_location">Add new location</string>
    <string name="location_list">Locations</string>
    <string name="need_location_permission_message">You need to enable location permissions first</string>
    <string name="location_permissions_granted_message">Location Permissions Granted</string>
    <string name="setting_enabled" translatable="false">EnabledSetting</string>
    <string name="settings_label">Settings</string>
    <string name="location_permissions">Location Permissions</string>
    <string name="enable_geofences">Enable Geofences</string>
    <string name="privacy">http://www.google.com/policies/privacy</string>
    <string name="ringer_permissions">Ringer Permissions</string>
    <string name="silent_mode_activated">Silent mode activated</string>
    <string name="touch_to_relaunch">Touch to launch the app.</string>
    <string name="back_to_normal">Back to normal</string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
</resources>
